--- a/static/publications_browser.html
+++ b/static/publications_browser.html
@@ -77,7 +77,7 @@
     function change_instrument(instrument) {
       var instr = instruments.find(function(s) { return s.id == instrument });
       var instrument_path = instr.ncnrdata_id || instrument.toLowerCase();
-      $.getJSON('../data/' + instrument + '.json', function(result) {
+      $.getJSON('data/' + instrument + '.json', function(result) {
         var data = (result instanceof Array) ? result : Object.keys(result).map(function(k) { return result[k] });
     //.filter(function(v) { return v.id });
     if (mainTable == null) {
@@ -168,7 +168,7 @@
     }
     
     function renderYear(d, type, row) {
-      console.log(type);
+      //console.log(type);
       var ts = getTimestring(d);
       var year = ts.split("-")[0] || "";
       if (type !== 'display' ) {
