adding USANS to publications browser

--- a/static/publications_browser.html
+++ b/static/publications_browser.html
@@ -47,6 +47,9 @@
           "ncnrdata_id": "ng3sans",
           "datalinks": ["raw"]
       },
+      {
+          "id": "USANS",
+      },
       //{
       //    "id": "NGBSANS",
       //    "datalinks": ["raw", "nxz_view"]
