--- a/static/publications_browser.html
+++ b/static/publications_browser.html
@@ -48,7 +48,10 @@
           "datalinks": ["raw"]
       },
       {
-          "id": "USANS",
+          "id": "USANS"
+      },
+      {
+          "id": "NGB10SANS"
       },
       //{
       //    "id": "NGBSANS",
