add NG7 reflectometer

--- a/static/publications_browser.html
+++ b/static/publications_browser.html
@@ -35,6 +35,9 @@
           "datalinks": ["raw", "nxz_view", "reductus"]
       },
       {
+          "id": "NG7REFL"
+      },
+      {
           "id": "NG7SANS",
           "datalinks": ["raw", "nxz_view"]
       },
