pad month and day with zeros so sorting works properly on dates

--- a/static/publications_browser.html
+++ b/static/publications_browser.html
@@ -184,6 +184,7 @@
       }
       else if (d["date-parts"]) {
         var t = d["date-parts"][0];
+        t = (t || []).map(function(p) { let ps=p.toFixed(); return (ps.length == 1) ? "0" + ps : ps });
         ts = t.join("-");
       }
       else if (d["raw"]) {
