adding SANS aggregate to publications_browser

--- a/static/publications_browser.html
+++ b/static/publications_browser.html
@@ -37,6 +37,9 @@
           "id": "NG7REFL"
       },
       {
+          "id": "SANS"
+      },
+      {
           "id": "NG7SANS",
           "datalinks": ["raw", "nxz_view"]
       },
@@ -50,11 +53,15 @@
           "datalinks": ["raw"]
       },
       {
+          "id": "NGB10SANS"
+      },
+      {
           "id": "USANS"
       },
       {
-          "id": "NGB10SANS"
+          "id": "VSANS"
       },
+      
       //{
       //    "id": "NGBSANS",
       //    "datalinks": ["raw", "nxz_view"]
