fixing BT8 collection ID

--- a/static/publications_browser.html
+++ b/static/publications_browser.html
@@ -24,6 +24,9 @@
     var mainTable;
     var instruments = [
       {
+          "id": "REFLECTOMETRY"
+      },
+      {
           "id": "PBR",
           "ncnrdata_id": "ngd",
           "datalinks": ["raw", "nxz_view", "reductus"]
