--- a/static/publications_browser.html
+++ b/static/publications_browser.html
@@ -123,7 +123,13 @@
     if (mainTable == null) {
       mainTable = $("table#experiments").dataTable({
         dom: 'lfrBtip',
-        buttons: ['excel', 'csv', 'pdf' ],
+        buttons: ['excel', 'csv', 
+         {
+           extend: 'pdfHtml5',
+           orientation: 'landscape',
+           pageSize: 'LEGAL'
+          }
+        ],
         data: data,
         select: false,
         order: [[9, "desc"]],
